--- a/custom_components/winkhaus_doorclient/manifest.json
+++ b/custom_components/winkhaus_doorclient/manifest.json
@@ -1,9 +1,9 @@
 {
   "domain": "winkhaus_door",
   "name": "Winkhaus Doorlock",
-  "documentation": "https://github.com/DEIN_BENUTZERNAME/ha-winkhaus-door",
-  "issue_tracker": "https://github.com/DEIN_BENUTZERNAME/ha-winkhaus-door/issues",
-  "codeowners": ["@DEIN_BENUTZERNAME"],
+  "documentation": "https://github.com/ramirezhr/ha-winkhaus-doorclient",
+  "issue_tracker": "https://github.com/ramirezhr/ha-winkhaus-doorclient/issues",
+  "codeowners": ["@ramirezhr"],
   "requirements": ["requests"],
   "version": "1.1.25",
   "iot_class": "local_polling",
