--- a/custom_components/winkhaus_doorclient/manifest.json
+++ b/custom_components/winkhaus_doorclient/manifest.json
@@ -1,8 +1,8 @@
 {
   "domain": "winkhaus_door",
-  "name": "Winkhaus Doorlock",
-  "documentation": "https://github.com/ramirezhr/ha-winkhaus-door",
-  "issue_tracker": "https://github.com/ramirezhr/ha-winkhaus-door/issues",
+  "name": "Winkhaus Doorclient",
+  "documentation": "https://github.com/ramirezhr/ha-winkhaus-doorclient",
+  "issue_tracker": "https://github.com/ramirezhr/ha-winkhaus-doorclient/issues",
   "codeowners": ["@ramirezhr"],
   "requirements": ["requests"],
   "version": "1.1.25",
