--- a/custom_components/winkhaus_doorclient/manifest.json
+++ b/custom_components/winkhaus_doorclient/manifest.json
@@ -1,11 +1,11 @@
 {
   "domain": "winkhaus_doorclient",
   "name": "Winkhaus Doorclient",
-  "documentation": "https://github.com/ramirezhr/ha-winkhaus-doorclient",
-  "issue_tracker": "https://github.com/ramirezhr/ha-winkhaus-doorclient/issues",
   "codeowners": ["@ramirezhr"],
-  "requirements": ["requests"],
-  "version": "1.1.29",
+  "config_flow": true,
+  "documentation": "https://github.com/ramirezhr/ha-winkhaus-doorclient",
   "iot_class": "local_polling",
-  "config_flow": true
+  "issue_tracker": "https://github.com/ramirezhr/ha-winkhaus-doorclient/issues",
+  "requirements": ["requests"],
+  "version": "1.1.29"
 }
