--- a/custom_components/winkhaus_doorclient/manifest.json
+++ b/custom_components/winkhaus_doorclient/manifest.json
@@ -7,5 +7,6 @@
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/ramirezhr/ha-winkhaus-doorclient/issues",
   "requirements": ["requests"],
-  "version": "1.1.29"
+  "version": "1.2.3"
+  "zeroconf": ["_whdc-device._tcp.local."]
 }
